# Wingmate

./: .gitignore  .infisical.json  AGENTS.md  PRIVACY_POLICY.md  Privacy Policy  README.md  build.gradle.kts  build.sh  config.yml  conveyor.conf  firebase.json  gradle.properties  gradlew  gradlew.bat  io.github.jdreioe.Wingmate.desktop  io.github.jdreioe.Wingmate.json  io.github.jdreioe.Wingmate.metainfo.xml  keystore.p12  obf_.obz Open Board File Formats.txt  pubspec.yaml  release-key.jks  settings.gradle.kts  version.properties  web_entrypoint.dart  wingmate.desktop  wingmate_test_lua.lua
.github/: copilot-instructions.md
android/: settings.gradle
androidApp/: build.gradle.kts  (+2 more)
linuxApp/: 99-wingmate-ftdi.rules  CMakeLists.txt  Cargo.toml  README.md  build.gradle.kts  wingmate.desktop
linuxApp/.cache/clangd/index/: main.cpp.23C62507C5151BBD.idx
linuxApp/src/: lib.rs  logo_data.rs  main.cpp  main.qml  main.rs  partner_window.rs  partner_window_bridge.rs  resources.qrc
linuxApp/src/components/: BottomBar.qml  Chip.qml  ModernButton.qml  ModernCard.qml  OnScreenKeyboard.qml  PhraseButton.qml  PredictionBar.qml  Sidebar.qml  SpeechControlsSidebar.qml  Theme.qml  qmldir
linuxApp/src/dialogs/: AddEditCategoryDialog.qml  AddEditPhraseDialog.qml  SpeechSettingsDialog.qml  VoiceLanguageDialog.qml  VoiceSelectionDialog.qml  VoiceSettingsDialog.qml  qmldir
linuxApp/src/main/kotlin/io/github/jdreioe/wingmate/kde/: KotlinBridge.kt  LinuxSpeechService.kt  PartnerWindowDriver.kt  PartnerWindowManager.kt  PhraseViewModel.kt
linuxApp/src/pages/: AddPronunciationEntryPage.qml  PronunciationDictionaryPage.qml  SettingsPage.qml  WelcomeWizard.qml  qmldir
(+842 files in other folders)
